Fix z-index issue covering tokens

--- a/staex/src/components/tokens/token.css
+++ b/staex/src/components/tokens/token.css
@@ -2,4 +2,5 @@
 	border: 2px solid dimgray;
 	border-radius: 50%;
 	position: absolute;
+	z-index: 2;
 }
